crates/shipper-registry/src/snapshots/shipper_registry__tests__error_owners_not_found.snap
---
source: crates/shipper-registry/src/lib.rs
expression: err.to_string()
---
crate not found when querying owners: nope
