crates/shipper-registry/src/snapshots/shipper_registry__tests__error_unexpected_status.snap
---
source: crates/shipper-registry/src/lib.rs
expression: err.to_string()
---
unexpected status code: 500 Internal Server Error
