crates/shipper-registry/src/snapshots/shipper_registry__tests__owner_minimal.snap
---
source: crates/shipper-registry/src/lib.rs
expression: owner
---
login: bot-user
name: ~
avatar: ~
