crates/shipper-registry/src/snapshots/shipper_registry__tests__owners_api_user_with_id.snap
---
source: crates/shipper-registry/src/lib.rs
expression: user
---
id: 42
login: bob
name: Bob Jones
avatar: "https://example.com/bob.png"
