crates/shipper-registry/src/snapshots/shipper_registry__tests__owners_api_user_without_id.snap
---
source: crates/shipper-registry/src/lib.rs
expression: user
---
id: ~
login: "team:core"
name: ~
avatar: ~
