crates/shipper-registry/src/snapshots/shipper_registry__tests__sparse_path_3char.snap
---
source: crates/shipper-registry/src/lib.rs
expression: "sparse_index_path(\"abc\")"
---
3/a/abc
