crates/shipper-registry/src/snapshots/shipper_registry__tests__sparse_path_4char.snap
---
source: crates/shipper-registry/src/lib.rs
expression: "sparse_index_path(\"demo\")"
---
de/mo/demo
