crates/shipper-registry/src/snapshots/shipper_registry__tests__sparse_path_long.snap
---
source: crates/shipper-registry/src/lib.rs
expression: "sparse_index_path(\"serde_json\")"
---
se/rd/serde_json
