crates/shipper-registry/src/snapshots/shipper_registry__tests__url_crate.snap
---
source: crates/shipper-registry/src/lib.rs
expression: url
---
https://crates.io/api/v1/crates/my-crate
