crates/shipper-registry/src/snapshots/shipper_registry__tests__url_custom_registry.snap
---
source: crates/shipper-registry/src/lib.rs
expression: url
---
https://my-registry.example.com/api/v1/crates/private-lib
